# todos

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
desktop/: package-lock.json
desktop/src-tauri/: tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: finished.rs  git_sync.rs
desktop/src-ui/: main.js  themes.js
desktop/ui/: index.html  style.css
example/: done.md  settings.json  today.md  todo.md
ios/: .gitignore  project.yml
ios/Tally.md/Tally.md/Services/: GitService.swift
ios/Tally.md/Tally.md/ViewModels/: AppViewModel.swift
ios/Tally.md/Tally.md/Views/: ActionBarView.swift  MarkdownTextView.swift  PaneView.swift  SettingsView.swift
ios/TallyMD/App/: ContentView.swift  TallyMDApp.swift
ios/TallyMD/Engine/: DateHeaderEngine.swift  ItemMovementEngine.swift
ios/TallyMD/Models/: Settings.swift  ThemePalette.swift
ios/TallyMD/Resources/: Info.plist
ios/TallyMD/Services/: FileService.swift  GitService.swift  KeychainService.swift
ios/TallyMD/Utilities/: DateParsing.swift  Debouncer.swift
ios/TallyMD/ViewModels/: AppViewModel.swift
ios/TallyMD/Views/: ActionBarView.swift  MarkdownTextView.swift  PaneView.swift  SettingsView.swift
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: finished.rs  main.rs  settings.rs
src-ui/: main.js  themes.js
ui/: index.html  style.css
